--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gardengenius
 server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/GardenGenius
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -17,4 +17,9 @@ jwt.refresh.secret=B7pD6mV5tK2gF8qR4jW1yX6zN9lQ3xC2yK7pT0hS3fV8
 
 jwt.expirationMs=3600000
 jwt.refreshExpirationMs=86400000
+
+
+cloudinary.cloud-name=dwk6jdkay
+cloudinary.api-key=773895282681851
+cloudinary.api-secret=hkbXhyMQpg69ya3DRS3E8VuSX34
 
