--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ cloudinary.cloud-name=dwk6jdkay
 cloudinary.api-key=773895282681851
 cloudinary.api-secret=hkbXhyMQpg69ya3DRS3E8VuSX34
 
+
+perenual.api.key=sk-j20r66e32d58efb996832
+
