--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<version>1.32.2</version>
 		</dependency>
 
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>-->
+
 	</dependencies>
 
 	<build>
