--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,6 @@ cloudinary.api-key=773895282681851
 cloudinary.api-secret=hkbXhyMQpg69ya3DRS3E8VuSX34
 
 
-perenual.api.key=sk-j20r66e32d58efb996832
+
+plantnet.api.key=2b10PDmC7m74DR5VzDUYOkCO
 
