added like fuctionality to post and and and enhance search function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,8 @@ spring.thymeleaf.suffix=.html
 jwt.access.secret=aW3y9sK8Tg9qD8zG5yK3L7q2Zk9R0M4mW8fF2jL4Q6nY
 jwt.refresh.secret=B7pD6mV5tK2gF8qR4jW1yX6zN9lQ3xC2yK7pT0hS3fV8
 
-#jwt.expirationMs=3600000
-#testing refresh token
-jwt.expirationMs=300000
+jwt.expirationMs=3600000
+
 jwt.refreshExpirationMs=86400000
 
 
