--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,16 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/GardenGenius
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 spring.thymeleaf.suffix=.html
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 jwt.access.secret=aW3y9sK8Tg9qD8zG5yK3L7q2Zk9R0M4mW8fF2jL4Q6nY
 jwt.refresh.secret=B7pD6mV5tK2gF8qR4jW1yX6zN9lQ3xC2yK7pT0hS3fV8
