--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ cloudinary.cloud-name=dwk6jdkay
 cloudinary.api-key=773895282681851
 cloudinary.api-secret=hkbXhyMQpg69ya3DRS3E8VuSX34
 
+logging.level.org.springframework=DEBUG
+
 
 
 plantnet.api.key=2b10PDmC7m74DR5VzDUYOkCO
