--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,13 @@ jwt.refresh.secret=B7pD6mV5tK2gF8qR4jW1yX6zN9lQ3xC2yK7pT0hS3fV8
 
 jwt.expirationMs=3600000
 
-jwt.refreshExpirationMs=86400000
+#testing
+#jwt.expirationMs=120000
 
+
+jwt.refreshExpirationMs=86400000
+#testing
+#jwt.refreshExpirationMs=180000
 
 cloudinary.cloud-name=dwk6jdkay
 cloudinary.api-key=773895282681851
